vlib/v/checker/tests/ptr_assign.out
vlib/v/checker/tests/ptr_assign.vv:3:5: error: cannot assign to `p`: expected `&int`, not `int literal`
    1 | mut v := 43
    2 | mut p := &v
    3 | p = 4
      |     ^
    4 | _ = p
