vlib/v/checker/tests/ptr_assign.vv
mut v := 43
mut p := &v
p = 4
_ = p
